@@ -30,6 +30,11 @@ RELEASE NOTES
     arguments as goals. This bug only manifested itself with some back-end
     Prolog compilers such as ECLiPSe.
 
+    Removed from the built-in object "logtalk" the decompile_predicate_head/4
+    and decompile_predicate_indicator/4 deprecated methods.
+
+    Removed support for the long deprecated Logtalk metapredicate/1 directive.
+
 
 2.43.0 - July 31, 2011
 
